--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@langchain/openai": "^0.0.10",
     "@supabase/supabase-js": "^2.39.2",
     "dotenv": "^16.3.1",
+    "langchain": "^0.1.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
