--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@langchain/community": "^0.0.15",
     "@langchain/openai": "^0.0.10",
     "@supabase/supabase-js": "^2.39.2",
+    "d3-dsv": "^2.0.0",
     "dotenv": "^16.3.1",
     "langchain": "^0.1.2",
     "react": "^18.2.0",
