--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@langchain/community": "^0.0.15",
+    "@langchain/core": "^0.1.16",
     "@langchain/openai": "^0.0.10",
     "@supabase/supabase-js": "^2.39.2",
     "d3-dsv": "^2.0.0",
